raw/HANIF PRAMUDITA HANGGARA ERZA 6397 245150200111038/2024-11-14-07-45-11.ceg/compilation.txt
NT.java:47: error: method input in class NT cannot be applied to given types;
        double[] input = input();
                         ^
  required: double[]
  found:    no arguments
  reason: actual and formal argument lists differ in length
NT.java:48: error: incompatible types: double cannot be converted to double[]
        tambah(input[1]);
                    ^
NT.java:49: error: method kurang in class NT cannot be applied to given types;
        kurang(input[2]);
        ^
  required: double[],double
  found:    double
  reason: actual and formal argument lists differ in length
NT.java:50: error: method kali in class NT cannot be applied to given types;
        kali(input[3]);
        ^
  required: double[],double
  found:    double
  reason: actual and formal argument lists differ in length
NT.java:51: error: method bagi in class NT cannot be applied to given types;
        bagi(input[4]);
        ^
  required: double[],double
  found:    double
  reason: actual and formal argument lists differ in length
NT.java:52: error: method akhir in class NT cannot be applied to given types;
        output(akhir());
               ^
  required: double
  found:    no arguments
  reason: actual and formal argument lists differ in length
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors
Not compiled
